--- a/index.html
+++ b/index.html
@@ -18,7 +18,71 @@
     <title>Logo</title>
 </head>
 
-<body>
+<body class="debug">
+
+    <!-- HEADER -->
+    <header class="w-100">
+        <div class="container w-100">
+            <div class="row ai-center space-between">
+                <div>
+                    <img class="w-100" src="img/logo.png" alt="Brand Name">
+                </div>
+
+                <div class="menu">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+
+            </div>
+        </div>
+    </header>
+
+    <!-- MAIN -->
+    <main>
+
+        <section>
+            <div class="container w-100">
+
+            </div>
+        </section>
+
+        <section>
+            <div class="container w-100">
+
+            </div>
+        </section>
+
+        <section>
+            <div class="container w-100">
+
+            </div>
+        </section>
+
+        <section>
+            <div class="container w-100">
+
+            </div>
+        </section>
+
+        <section>
+            <div class="container w-100">
+
+            </div>
+        </section>
+
+        <section>
+            <div class="container w-100">
+
+            </div>
+        </section>
+
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="container w-100">
+
+        </div>
+    </footer>
 
 </body>
 
