--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
 
                 <div class="menu">
                     <i class="fa-solid fa-bars"></i>
+
+                    <ul class="space-between">
+                        <li>Planning</li>
+                        <li>Testimonials</li>
+                        <li>Features</li>
+                        <li>About Us</li>
+                        <li><button>Get Started</button></li>
+                    </ul>
+
                 </div>
 
             </div>
