Creazione prima section in mobile

--- a/index.html
+++ b/index.html
@@ -52,8 +52,37 @@
     <!-- MAIN -->
     <main>
 
-        <section>
+        <section id="product-presentation">
             <div class="container w-100">
+
+                <div class="row wrap">
+
+                    <div class="column">
+
+                        <div class="card">
+                            <h3>Get a demo application</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur esse explicabo alias
+                                at,
+                                expedita dolorem perferendis voluptas vero nostrum.</p>
+                            <div class="button-container">
+                                <button><i class="fa-brands fa-apple"></i> App Store</button>
+                            </div>
+
+                            <img class="w-100" src="img/phone.png" alt="Phone">
+
+                        </div>
+
+                        <div class="card"></div>
+
+                        <div class="card"></div>
+
+                        <div class="card"></div>
+
+                        <div class="card"></div>
+
+                    </div>
+
+                </div>
 
             </div>
         </section>
