Rielaborazione prima section in mobile

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
                 <div class="row wrap">
 
                     <div class="column">
-
                         <div class="card">
                             <h3>Get a demo application</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur esse explicabo alias
@@ -71,15 +70,39 @@
                             <img class="w-100" src="img/phone.png" alt="Phone">
 
                         </div>
+                    </div>
 
-                        <div class="card"></div>
-
-                        <div class="card"></div>
-
-                        <div class="card"></div>
-
-                        <div class="card"></div>
-
+                    <div class="column">
+                        <div class="card">
+                            <i class="fa-solid fa-file-code"></i>
+                            <h3>Clean Code</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem facere quasi nam
+                                reprehenderit unde quas, id corrupti inventore molestias!</p>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="card">
+                            <i class="fa-solid fa-compass-drafting"></i>
+                            <h3>Web Design</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem facere quasi nam
+                                reprehenderit unde quas, id corrupti inventore molestias!</p>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="card">
+                            <i class="fa-solid fa-laptop-code"></i>
+                            <h3>Developement</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem facere quasi nam
+                                reprehenderit unde quas, id corrupti inventore molestias!</p>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="card">
+                            <i class="fa-solid fa-bullhorn"></i>
+                            <h3>Branding</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem facere quasi nam
+                                reprehenderit unde quas, id corrupti inventore molestias!</p>
+                        </div>
                     </div>
 
                 </div>
