--- a/index.html
+++ b/index.html
@@ -59,14 +59,16 @@
 
                     <div class="column">
                         <div class="card">
-                            <h3>Get a demo application</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur esse explicabo alias
-                                at,
-                                expedita dolorem perferendis voluptas vero nostrum.</p>
-                            <div class="button-container">
-                                <button><i class="fa-brands fa-apple"></i> App Store</button>
+                            <div>
+                                <h3>Get a demo application</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur esse explicabo
+                                    alias
+                                    at,
+                                    expedita dolorem perferendis voluptas vero nostrum.</p>
+                                <div class="button-container">
+                                    <button><i class="fa-brands fa-apple"></i> App Store</button>
+                                </div>
                             </div>
-
                             <img class="w-100" src="img/phone.png" alt="Phone">
 
                         </div>
