Strategic planning per mobile e tablet

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- Link Font 'PT Sans' -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
 
     <!-- Link CSS -->
     <link rel="stylesheet" href="css/style.css">
@@ -112,8 +113,30 @@
             </div>
         </section>
 
-        <section>
+        <section id="strategic-planning">
             <div class="container w-100">
+
+                <div class="planning-caption">
+                    <img class="w-100" src="img/planning1.png" alt="planning1">
+
+                    <h2>Strategic Planning</h2>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore vero in dolore quos facere
+                        tenetur consequuntur optio incidunt molestias odit amet, quibusdam, non, magnam enim est. Aut
+                        rerum atque repudiandae vel! Laudantium, odit quidem.</p>
+
+                </div>
+
+                <div class="card">
+                    <img src="img/planning2.png" alt="planning2">
+                    <h3>App Developement</h3>
+                    <p>Develop an on-demand app for your delivery business to reach your targeted customers without any
+                        interruption.</p>
+
+                    <div class="i-container">
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+                </div>
 
             </div>
         </section>
