--- a/index.html
+++ b/index.html
@@ -115,26 +115,31 @@
 
         <section id="strategic-planning">
             <div class="container w-100">
+                <div class="column">
+                    <div class="planning-caption">
+                        <img class="w-100" src="img/planning1.png" alt="planning1">
 
-                <div class="planning-caption">
-                    <img class="w-100" src="img/planning1.png" alt="planning1">
+                        <h2>Strategic Planning</h2>
 
-                    <h2>Strategic Planning</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore vero in dolore quos facere
+                            tenetur consequuntur optio incidunt molestias odit amet, quibusdam, non, magnam enim est.
+                            Aut
+                            rerum atque repudiandae vel! Laudantium, odit quidem.</p>
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore vero in dolore quos facere
-                        tenetur consequuntur optio incidunt molestias odit amet, quibusdam, non, magnam enim est. Aut
-                        rerum atque repudiandae vel! Laudantium, odit quidem.</p>
-
+                    </div>
                 </div>
 
-                <div class="card">
-                    <img src="img/planning2.png" alt="planning2">
-                    <h3>App Developement</h3>
-                    <p>Develop an on-demand app for your delivery business to reach your targeted customers without any
-                        interruption.</p>
+                <div class="column">
+                    <div class="card">
+                        <img src="img/planning2.png" alt="planning2">
+                        <h3>App Developement</h3>
+                        <p>Develop an on-demand app for your delivery business to reach your targeted customers without
+                            any
+                            interruption.</p>
 
-                    <div class="i-container">
-                        <i class="fa-solid fa-arrow-down"></i>
+                        <div class="i-container">
+                            <i class="fa-solid fa-arrow-down"></i>
+                        </div>
                     </div>
                 </div>
 
