Applicazione width: 100% a tutte le img

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                     <button><i class="fa-brands fa-apple"></i> App Store</button>
                                 </div>
                             </div>
-                            <img class="w-100" src="img/phone.png" alt="Phone">
+                            <img src="img/phone.png" alt="Phone">
 
                         </div>
                     </div>
@@ -117,7 +117,7 @@
             <div class="container w-100">
                 <div class="column">
                     <div class="planning-caption">
-                        <img class="w-100" src="img/planning1.png" alt="planning1">
+                        <img src="img/planning1.png" alt="planning1">
 
                         <h2>Strategic Planning</h2>
 
