--- a/index.html
+++ b/index.html
@@ -146,8 +146,68 @@
             </div>
         </section>
 
-        <section>
+        <section id="testimonials">
             <div class="container w-100">
+                <div class="col">
+
+                    <div class="column">
+                        <h3>Testimonials</h3>
+                        <h2>We are commited expert partners</h2>
+                        <p>
+                            We place huge value on strong relationships and have seen the benefit they bring to our
+                            business. Customer feedback is vital in helping us to get it right.
+                        </p>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <div class="img-container">
+                                <img src="img/testimonial1.jpg" alt="testimonial1">
+                            </div>
+
+                            <p class="quoted-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nulla
+                                necessitatibus nobis
+                                neque deserunt. Exercitationem veniam atque enim harum beatae deserunt adipisci vero
+                                totam quas, provident dolor ipsum minus quibusdam!</p>
+
+                            <div class="signature">Nat Reynolds</div>
+
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <div class="img-container">
+                                <img src="img/testimonial2.jpg" alt="testimonial2">
+                            </div>
+
+                            <p class="quoted-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nulla
+                                necessitatibus nobis
+                                neque deserunt. Exercitationem veniam atque enim harum beatae deserunt adipisci vero
+                                totam quas, provident dolor ipsum minus quibusdam!</p>
+
+                            <div class="signature">Celia Almeida</div>
+
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <div class="img-container">
+                                <img src="img/testimonial3.jpg" alt="testimonial3">
+                            </div>
+
+                            <p class="quoted-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nulla
+                                necessitatibus nobis
+                                neque deserunt. Exercitationem veniam atque enim harum beatae deserunt adipisci vero
+                                totam quas, provident dolor ipsum minus quibusdam!</p>
+
+                            <div class="signature">Bob Roberts</div>
+
+                        </div>
+                    </div>
+
+                </div>
 
             </div>
         </section>
