Sezione Testimonials per tablet e desktop

--- a/index.html
+++ b/index.html
@@ -165,12 +165,15 @@
                                 <img src="img/testimonial1.jpg" alt="testimonial1">
                             </div>
 
-                            <p class="quoted-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nulla
-                                necessitatibus nobis
-                                neque deserunt. Exercitationem veniam atque enim harum beatae deserunt adipisci vero
-                                totam quas, provident dolor ipsum minus quibusdam!</p>
+                            <div class="feedback">
+                                <p class="quoted-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                                    nulla
+                                    necessitatibus nobis
+                                    neque deserunt. Exercitationem veniam atque enim harum beatae deserunt adipisci vero
+                                    totam quas, provident dolor ipsum minus quibusdam!</p>
 
-                            <div class="signature">Nat Reynolds</div>
+                                <div class="signature">Nat Reynolds</div>
+                            </div>
 
                         </div>
                     </div>
@@ -181,12 +184,15 @@
                                 <img src="img/testimonial2.jpg" alt="testimonial2">
                             </div>
 
-                            <p class="quoted-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nulla
-                                necessitatibus nobis
-                                neque deserunt. Exercitationem veniam atque enim harum beatae deserunt adipisci vero
-                                totam quas, provident dolor ipsum minus quibusdam!</p>
+                            <div class="feedback">
+                                <p class="quoted-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                                    nulla
+                                    necessitatibus nobis
+                                    neque deserunt. Exercitationem veniam atque enim harum beatae deserunt adipisci vero
+                                    totam quas, provident dolor ipsum minus quibusdam!</p>
 
-                            <div class="signature">Celia Almeida</div>
+                                <div class="signature">Celia Almeida</div>
+                            </div>
 
                         </div>
                     </div>
@@ -197,12 +203,15 @@
                                 <img src="img/testimonial3.jpg" alt="testimonial3">
                             </div>
 
-                            <p class="quoted-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nulla
-                                necessitatibus nobis
-                                neque deserunt. Exercitationem veniam atque enim harum beatae deserunt adipisci vero
-                                totam quas, provident dolor ipsum minus quibusdam!</p>
+                            <div class="feedback">
+                                <p class="quoted-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                                    nulla
+                                    necessitatibus nobis
+                                    neque deserunt. Exercitationem veniam atque enim harum beatae deserunt adipisci vero
+                                    totam quas, provident dolor ipsum minus quibusdam!</p>
 
-                            <div class="signature">Bob Roberts</div>
+                                <div class="signature">Bob Roberts</div>
+                            </div>
 
                         </div>
                     </div>
