Sezione Benefits per mobile

--- a/index.html
+++ b/index.html
@@ -221,8 +221,67 @@
             </div>
         </section>
 
-        <section>
+        <section id="benefits">
             <div class="container w-100">
+                <h2>Benefits of working with us</h2>
+
+                <div class="col">
+
+                    <div class="card">
+                        <div class="card-number">01</div>
+                        <h3>High Quality</h3>
+                        <div class="caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus facilis
+                            excepturi nulla labore. Tempora, in distinctio? Recusandae blanditiis vel ex deleniti vero
+                            ducimus earum cumque?</div>
+                        <div class="button-container"><button>more</button></div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-number">02</div>
+                        <h3>Creative Team</h3>
+                        <div class="caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus facilis
+                            excepturi nulla labore. Tempora, in distinctio? Recusandae blanditiis vel ex deleniti vero
+                            ducimus earum cumque?</div>
+                        <div class="button-container"><button>more</button></div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-number">03</div>
+                        <h3>Amazing Results</h3>
+                        <div class="caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus facilis
+                            excepturi nulla labore. Tempora, in distinctio? Recusandae blanditiis vel ex deleniti vero
+                            ducimus earum cumque?</div>
+                        <div class="button-container"><button>more</button></div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-number">04</div>
+                        <h3>Best Pricing</h3>
+                        <div class="caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus facilis
+                            excepturi nulla labore. Tempora, in distinctio? Recusandae blanditiis vel ex deleniti vero
+                            ducimus earum cumque?</div>
+                        <div class="button-container"><button>more</button></div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-number">05</div>
+                        <h3>Innovations</h3>
+                        <div class="caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus facilis
+                            excepturi nulla labore. Tempora, in distinctio? Recusandae blanditiis vel ex deleniti vero
+                            ducimus earum cumque?</div>
+                        <div class="button-container"><button>more</button></div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-number">06</div>
+                        <h3>24/7 Support</h3>
+                        <div class="caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus facilis
+                            excepturi nulla labore. Tempora, in distinctio? Recusandae blanditiis vel ex deleniti vero
+                            ducimus earum cumque?</div>
+                        <div class="button-container"><button>more</button></div>
+                    </div>
+
+                </div>
 
             </div>
         </section>
