Sezione About Us per mobile

--- a/index.html
+++ b/index.html
@@ -286,8 +286,35 @@
             </div>
         </section>
 
-        <section>
+        <section id="about-us">
             <div class="container w-100">
+
+                <div class="summary">
+                    <h2>About Us</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae vero odit quisquam quaerat
+                        in nam repellendus. Est aliquid distinctio impedit ut voluptatem nihil, quisquam nam culpa quis
+                        rem quo facere a totam libero laudantium aliquam illo reprehenderit maiores animi. Enim
+                        corporis, voluptas soluta dolorum repudiandae nesciunt architecto alias, officiis unde
+                        aspernatur, molestias laudantium ducimus similique doloremque? Dicta omnis neque voluptatum.</p>
+                    <p>Necessitatibus est sint tempore, temporibus facere iste neque corporis illo quam! Officia iure
+                        laborum praesentium deleniti odio! Obcaecati, eius optio praesentium fugit doloremque tenetur
+                        animi. Corrupti, odit illum doloribus aliquam, officiis quos quo earum eligendi, nulla quibusdam
+                        fuga delectus repellendus?</p>
+                </div>
+
+                <div class="founder-quote">
+                    <div class="img-container">
+                        <img src="img/about.jpg" alt="about">
+                    </div>
+
+                    <div class="caption">
+                        I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.
+                    </div>
+
+                    <div class="button-container">
+                        <button><i class="fa-brands fa-linkedin"></i> Find me on linkedin</button>
+                    </div>
+                </div>
 
             </div>
         </section>
