Sezione Get Started per mobile

--- a/index.html
+++ b/index.html
@@ -329,8 +329,23 @@
             </div>
         </section>
 
-        <section>
+        <section id="get-started">
             <div class="container w-100">
+
+                <h3>GET STARTED</h3>
+                <p>Simple, Transparent Pricing</p>
+                <p>It's Free</p>
+                <div class="caption">We're still in beta and we will be for awhile. As we add more functionality, we'll
+                    look into other plans with more controls.</div>
+                <div class="button-container">
+                    <button>Get Started</button>
+                </div>
+                <div class="copyrights">
+                    <span> Copyright 2021 Boolean</span>
+                    <span>Classe XX</span>
+                    <span><a href="">Privacy policy</a></span>
+                </div>
+
 
             </div>
         </section>
