Sezione Footer per mobile

--- a/index.html
+++ b/index.html
@@ -355,7 +355,11 @@
     <!-- FOOTER -->
     <footer>
         <div class="container w-100">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptatum consequuntur quibusdam at
+                repellendus rem velit?</p>
 
+            <p><a href="">Lorem ipsum</a> scelerisque mauris pellentesque</p>
+            <a href="">Boolean careers</a>
         </div>
     </footer>
 
